styles/styles.css
nav {
    background-color: steelblue;
    padding: 10px;
}
nav a {
    color: white; display: block; 
    padding: 20px;
}
h1 {
    color: steelblue;
}
img {
    width: 150px; 
    height: auto; 
    border: 1px solid steelblue; 
    padding: 2px; 
    box-shadow: 0 0 30px gray;
}
p { padding: 0;}
main {
    max-width: 840px;
}
aside {
    width: rem;
    margin: 1rem;
    border: 1px solid rgba(0, 0, 0, 0.2); /* 1 */
    padding: 1rem;
    background-color: #be1c1c;
    color: #fcfdfd;
    text-align: center;
}
aside img {
    width: 200px;
    height: auto;
}
main img {
    width: 150px;
    height: auto;
    
}
footer {
    margin-top: 15px;
    border-top: 1px solid #bc7c1b;
    ext-align: center;
} 

